fix issue with search results height on mobile

--- a/src/styles/Favorites.css
+++ b/src/styles/Favorites.css
@@ -58,7 +58,6 @@
   grid-template-rows: 1fr 1fr 1fr 1fr;
   align-items: start;
   row-gap: 20px;
-  column-gap: 10px;
   position: relative;
   right: 24px;
 }
