--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -68,7 +68,6 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   align-items: start;
-  height: 2400px;
   column-gap: 20px;
   row-gap: 20px;
   position: relative;
